# roci

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile.backend  Dockerfile.frontend  README.md  ROCI_Developer_Spec_v1 (1).docx  ROCI_Engine_Features_Original.docx  docker-compose.yml  pyproject.toml  requirements.txt
airflow/: dag_roci.py
demo_out/: final_score.json
demo_out/portal_outputs/: bhulekh.json  bhunaksha.json  cppp_gem.json  igrsup.json  rera_up.json
igrsup portal/frontend/.next/: trace
igrsup_portal/: README.md
igrsup_portal/backend/: .env.example  Dockerfile  debug-popup-rows.json  package-lock.json  package.json  requirements.txt
igrsup_portal/backend/app/: config.py  main.py
igrsup_portal/backend/data/: analysis_history.csv  (+2 more)
igrsup_portal/docs/: mvp-notes.md
igrsup_portal/frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
roci_scraper/: browser.py  celery_app.py  extractors.py  geo.py  main.py  normalize.py  portal_utils.py  schema.py  scorer.py  tasks.py  utils.py  validator.py  zone_detector.py
roci_scraper/fixtures/: ayodhya_374_1a.json
roci_scraper/portals/: base.py  bhulekh.py  bhunaksha.py  cppp_gem.py  igrsup.py  registry.py  rera_up.py
roci_scraper/ref_data/: circle_rates.json  circle_rates_sadar_raw.json  clu_map.json  infra_type_weights.json  master_plan.json  rera_multipliers.json  sro_boundaries.json  stage_multipliers.json  zone_weights.json
scripts/: cache_igrsup_sros.py  debug_deed_detail.py
tests/: test_confidence.py  test_formula_cases.py  test_normalize.py  test_rera_up.py  test_scorer.py
(+108 files in other folders)
