[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "roci-scraper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "rapidfuzz>=3.9",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "tenacity>=8.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["roci_scraper*"]